[tool.poetry]
name = "jupyterlab_docker"
version = "0.2.0"
description = "Environment JupyterLab Poetry docker-compose"

authors = ["im"]

[tool.poetry.dependencies]
python = "^3.8"

jupyterlab = "*"
numpy = "*"
pandas = "*"
matplotlib = "*"
seaborn = "*"
japanize-matplotlib = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry_core>=1.0.10"]
build-backend = "poetry.masonry.api"
